reformat all code

--- a/.swiftpm/xcode/xcshareddata/xcschemes/CoreDataEvolution-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/CoreDataEvolution-Package.xcscheme
@@ -71,6 +71,13 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "IS_XCODE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
