--- a/.swiftpm/xcode/xcshareddata/xcschemes/CoreDataEvolution-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/CoreDataEvolution-Package.xcscheme
@@ -35,6 +35,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CoreDataEvolutionClient"
+               BuildableName = "CoreDataEvolutionClient"
+               BlueprintName = "CoreDataEvolutionClient"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -71,6 +85,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CoreDataEvolutionClient"
+            BuildableName = "CoreDataEvolutionClient"
+            BlueprintName = "CoreDataEvolutionClient"
+            ReferencedContainer = "container:">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "IS_XCODE"
@@ -85,15 +109,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CoreDataEvolution"
-            BuildableName = "CoreDataEvolution"
-            BlueprintName = "CoreDataEvolution"
+            BlueprintIdentifier = "CoreDataEvolutionClient"
+            BuildableName = "CoreDataEvolutionClient"
+            BlueprintName = "CoreDataEvolutionClient"
             ReferencedContainer = "container:">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
